--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,29 +1,29 @@
 <p style="color: green"><%= notice %></p>
-
-<h1>Items</h1>
-
+<h3 class="header">Inventorable</h3>
 <div id="items">
-  <% @with_out_deleted.each do |item| %>
-    <%= link_to item.name, item_path(item) , class:'' %>
-     <div> deleted item: <%= item.deleted? %></div> 
-    <p>
-      <%= link_to "Show this item", item %>
-      <%= link_to "Destroy Softly", soft_deletion_item_path(item),  method: :delete  %>
-    </p>
-  <% end %>
+  <table id="customers">
+    <tr>
+      <th>Item Name</th>
+      <th>Description</th>
+      <th>links</th>
+    </tr>
+
+    <% @items.each do |item| %>
+      <%# <% cache item do %> 
+        <tr class=" <%#=  'deleted' if item.deleted? %> ">
+        <tr class=" <%=  item.deleted? ? 'deleted' : '' %> ">
+          <td><%= item.name %></td>
+          <td><%= item.description %></td>
+          <td> 
+            <%= link_to "Show", item %> <br> 
+            <%= link_to "Edit", edit_item_path(item) %> <br> 
+            <%= link_to "Delete", soft_deletion_item_path(item),  method: :delete  %> <br>
+            <%= link_to "Deletion Notes", comment_path(item.comments.first) if item.comments.any?  %>
+          </td>
+        </tr>
+      <%# <% end %>
+    <% end %>
+  </table>
 </div>
 
-
-<br>
-<br>
-<br>
-
 <%= link_to "New item", new_item_path %>
-<br>
-<br>
-<br>
-<h1>Deleted Items</h1>
-  <% @deleted.each do |item| %>
-    <%= link_to item.name, item_path(item) , class:'' %> 
-     <div> deleted item: <%= item.deleted? %></div> 
-  <% end %>
