--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,23 +7,21 @@
       <th>Description</th>
       <th>links</th>
     </tr>
-
     <% @items.each do |item| %>
-      <%# <% cache item do %> 
-        <tr class=" <%#=  'deleted' if item.deleted? %> ">
-        <tr class=" <%=  item.deleted? ? 'deleted' : '' %> ">
-          <td><%= item.name %></td>
-          <td><%= item.description %></td>
-          <td> 
-            <%= link_to "Show", item %> <br> 
-            <%= link_to "Edit", edit_item_path(item) %> <br> 
-            <%= link_to "Delete", soft_deletion_item_path(item),  method: :delete  %> <br>
-            <%= link_to "Deletion Notes", comment_path(item.comments.first) if item.comments.any?  %>
-          </td>
-        </tr>
-      <%# <% end %>
+      <tr class=" ">
+        <td>
+          <h2><%= item.name %>  </h2>
+          <%= link_to 'Undelete', restore_item_path(item)  , class:'' if item.deleted? %>
+        </td>
+        <td><%= item.description %></td>
+        <td> 
+          <%= link_to "Show", item %> <br> 
+          <%= link_to "Edit", edit_item_path(item) %> <br> 
+          <%= link_to "Delete", soft_deletion_item_path(item),  method: :delete  %> <br>
+          <%= link_to "Deletion Notes", comment_path(item.comments.first) if item.comments.any?  %>
+        </td>
+      </tr>
     <% end %>
   </table>
 </div>
-
 <%= link_to "New item", new_item_path %>
